Criaçao da tela de cadastro de autores, tratamento de exception e estilizaçao w3s